; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/intel-pt-decoder/extr_intel-pt-pkt-decoder.c_intel_pt_get_packet.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/intel-pt-decoder/extr_intel-pt-pkt-decoder.c_intel_pt_get_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_pt_pkt = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @intel_pt_get_packet(i8* %0, i64 %1, %struct.intel_pt_pkt* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.intel_pt_pkt*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.intel_pt_pkt* %2, %struct.intel_pt_pkt** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load %struct.intel_pt_pkt*, %struct.intel_pt_pkt** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @intel_pt_do_get_packet(i8* %10, i64 %11, %struct.intel_pt_pkt* %12, i32 %14)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp sgt i32 %16, 0
  br i1 %17, label %18, label %44

18:                                               ; preds = %4
  br label %19

19:                                               ; preds = %37, %18
  %20 = load i32, i32* %9, align 4
  %21 = icmp slt i32 %20, 8
  br i1 %21, label %22, label %35

22:                                               ; preds = %19
  %23 = load i64, i64* %6, align 8
  %24 = load i32, i32* %9, align 4
  %25 = sext i32 %24 to i64
  %26 = icmp ugt i64 %23, %25
  br i1 %26, label %27, label %35

27:                                               ; preds = %22
  %28 = load i8*, i8** %5, align 8
  %29 = load i32, i32* %9, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i8, i8* %28, i64 %30
  %32 = load i8, i8* %31, align 1
  %33 = icmp ne i8 %32, 0
  %34 = xor i1 %33, true
  br label %35

35:                                               ; preds = %27, %22, %19
  %36 = phi i1 [ false, %22 ], [ false, %19 ], [ %34, %27 ]
  br i1 %36, label %37, label %40

37:                                               ; preds = %35
  %38 = load i32, i32* %9, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %9, align 4
  br label %19

40:                                               ; preds = %35
  %41 = load %struct.intel_pt_pkt*, %struct.intel_pt_pkt** %7, align 8
  %42 = load i32*, i32** %8, align 8
  %43 = call i32 @intel_pt_upd_pkt_ctx(%struct.intel_pt_pkt* %41, i32* %42)
  br label %44

44:                                               ; preds = %40, %4
  %45 = load i32, i32* %9, align 4
  ret i32 %45
}

declare dso_local i32 @intel_pt_do_get_packet(i8*, i64, %struct.intel_pt_pkt*, i32) #1

declare dso_local i32 @intel_pt_upd_pkt_ctx(%struct.intel_pt_pkt*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
